--- a/chapter3.tex
+++ b/chapter3.tex
@@ -2,15 +2,78 @@
 
 \chapter{Sensor Data Provenance Collection Framework for the Internet of Things}
 
-In this chapter we define all of the components and constructs of our proposed model for provenance collection in IoT devices. We outline the components for collection, storage and querying of provenance data.
+In this chapter, we  define how provenance is collected and modeled along the IoT architectural stack. We also define implementation specifics of a provenance collection framework for IoT device. 
 
-\section{Provenance\-Collection Model}
+\section{IoT Provenance\-Collection Data Model}
+%This section discusses the data model in which we represent sensor and actuator reading of provenance data collected from IoT devices . It also talks about the relationship between IoT provenance Collection and PROV\-DM; How data is process and dissemenated accross the IoT architecture.
+%
+%\textcolor{red}{TODO: Talks about how we use PROV\-DM and what kinds of provenance we are looking to store}
 
-\textcolor{red}{TODO: Talks about how we use PROV\-DM and what kinds of provenance we are looking to store}
+A provenance model is used to represents causal relationship between objects and it is usually modeled as a Directed Acyclic Graph(DAG).This enables for better visualization of provenance relationships and also a unified format for representing provenance data. There are two major models for modelling provenance, OPM and Prov\-DM. PROV\-DM is a predecessor and standardized version of OPM. It allows the modeling of object either physical or digital. PROV\-DM is chosen as the model to represent provenance for our implementation because it allows for proper representation of all of the relationships in which we envision for IoT devices. This section defines a model for relaying provenance in IoT systems which is built on top of PROV\-DM. 
+
+
+
+
+
+
+
+From the IoT architecture described in Section 2, we can see that data is disseminated from sensors and actuators across various layers contained in the IoT architectural stack. The provenance data produced from various sensors is collectively aggregated at the gateway layer and/or the cloud layer. We allow for provenance data to be translated to the appropriate PROV\-DM format at the various levels of the IoT architecture. This allows for fault tolerant processing of information even in the case of a network failure at all layers.
+Sensor readings are collected from devices as specified by a policy. This helps address the memory constraint problems of collecting provenance in IoT devices.Policy specification and implementation  are discussed in detail in chapter 4. 
+
+
+
+Using the example of a smart home use case as described in chapter 2 of this proposal, an example of how our provenance collection framework can be applied is described below
+
+
+\begin{itemize}
+
+\item provenance trace data is collected from sensor from every device contained in the home(e.g thermostat, refrigerator, and smart doors).The  provenance data collected is specified in the policy document which can be only be defined by the house owner. 
+
+\item Each device in the smart home aggregates sensor readings and this information is passed to the gateways. The information is further analyzed and transmitted to the cloud for storage and further analysis could be conducted to derive more insights from the provenance data collected. This information is then transferred to the cloud where it is mapped to a provenance model and visualized. The cloud contains all of the aggregated provenance from the respective devices contained in the smart home. The respective devices could also map the sensor readings into provenance model and perform computations on the data.
+
+\end{itemize}
+
+
+
+
+
+\subsection{Provenance-Collection Model Definition}
+
+It is assumed that provenance data is collected from the underlying IoT device using the framework outline in section 3 of this chapter below. Data is collected from sensors and actuators attached to an IoT device.The underlying construct is represented as a graph which denotes the relationships between multiple sensors and actuator readings. Since PROV\-DM provides a generic model for relaying provenance information, we define a more specific construct for representing provenance data in IoT devices built on top of  PROV\-DM. We define provenance data point(PDP) as a user transaction for storing provenance data. We use the same instance of Entity, activity and actors from PROV\-DM to represent data object. In the context of IoT provenance the entity, process and agent are redefined below:
+
+\begin{itemize}
+
+\item Entity: 
+\end{itemize}
+
+
+
+\subsection{Provenance Characteristics}
+
+provenance denotes the who, where and why of data transformation. These characteristics outlines essential provenance data that is collected in any system.In an IoT system, It is imperative that we collect sensor and actuator reading that satisfies the required conditions. The characteristics of data provenance are outlined in details below.
+
+
+\begin{itemize}
+
+\item Who: This characteristics provides information on who made modifications to a data object. Knowing the "who" characteristics made is essential because it maps identity of modification to a particular data object. An example of who in an IoT use case is a sensor device ID.
+
+\item Where: This characteristic denotes location information in which data transformation was made. This characteristic is optional since not every data modification contains location details.
+
+\item When: This characteristic denotes the time information in which data transformation occurred. This is an essential provenance characteristic. Being able to tell the time of a data transformation allows for varied use scenarios of tracing data anomalies.
+
+\item How: This characteristic denotes the process in which transformation is applied on a data object. A use case for IoT can be seen in the various operations(delete, create, open) that could be performed on a file.
+
+\end{itemize}
+
+
+
+
+
+
 
 \section{Provenance-Collection System}
 
-In this section, we outline the components of our system and describe how provenance information is collected across the IoT ecosystem. Figure 1 displays the system architecture of our approach. Sensor and actuator readings in the form of I/O are recorded by the tracer component. This component intercepts system level I/O and produces trace information in the Common Trace Format (CTF). CTF represents binary trace information containing multiple streams of binary events such as I/O activity. Trace information is converted into the Open Provenance Model (OPM), which represents the relationship between provenance entities contained in the system. Our system relies heavily on data pruning to reduce and remove unimportant provenance in order to conserve memory. The key research challenge is in creating an efficient data pruning technique that ranks I/O operations based on importance. Pruned provenance information is later securely transmitted and stored in a private cloud backend.
+In this section, we outline the components of our system and describe how provenance system trace is collected across the IoT device. Figure 1 displays the system architecture of our approach. Sensor and actuator readings in the form of I/O are recorded by the tracer component. This component intercepts system level I/O events and produces trace information in the Common Trace Format (CTF). CTF represents binary trace information containing multiple streams of binary events such as I/O activity. Trace information is converted into the Open Provenance Model (OPM), which represents the relationship between provenance entities contained in the system. Our system relies heavily on data pruning to reduce and remove unimportant provenance in order to conserve memory. This is achieved by using a policy based approach where a user with administrative privileged is given access to create a policy which dictates what provenance data to collect. The remaining information is discarded. The key research challenge is in creating an efficient data pruning technique that ranks I/O operations based on importance. Pruned provenance information is later securely transmitted and stored in a private cloud backend.
 
 \begin{figure}[h]
 \begin{center}
@@ -24,13 +87,13 @@ In this section, we outline the components of our system and describe how proven
 The goal is to create a provenance aware system that records I/O operations on data for devices connected in an IoT system. For our implementation, several tools and hardware components are utilized in the development of our prototype, some of the tools utilized are outlined below:
 
 \begin{itemize}
-\item Xilinx Zynq ZedBoard and TI TM4C129E. These devices are microcontrollers used to evaluate our approach. We choose the Xilinx Zynq ZedBoard because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, TM4C is a low­cost, simple IoT demonstrator that was chosen for its high­performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
+\item BeagleBone Black Board. This device is a microcontrollers used to evaluate our approach. We choose the BeagleBone Board because it is a representation of what can be found on an IoT gateway device and it has the capability to include custom hardware in programmable logic. Also, BeagleBone is a low­cost, simple IoT demonstrator that was chosen for its high­performance, on­board emulation, and IoT gateway projects can be programmed without additional need for hardware tools.
 
 \item Real Time Executive for Multiprocessor Systems (RTEMS) is an open source real­time operating system (RTOS) for embedded systems. This operating system is a typical RTOS that may be deployed in IoT devices.
 
 \end{itemize}
 
 
-\section{Provenance Aware IDS System for IoT }
-
-This section outlines the core functionalities of our model PAIST. 
+%\section{Provenance Aware IDS System for IoT }
+%
+%This section outlines the core functionalities of our model PAIST. 
